--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,21 @@
     color:#f0efeb;
 }
 
+@font-face {
+    font-family: Hatton;
+    src: url("Hatton-Medium.otf") format("opentype");
+    color:#f0efeb;
+}
+
 body {
     background-color:#DDD3CA;
   }
 
 h1{
-    font-family: Amsterdam;
     color:#9B694D;
 }
 
 h2{
     font-family: Amsterdam;
-    color:#f0efeb;
+    color:sienna;
 }
