--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 h1{
     font-family: Amsterdam;
-    font-size: x-large;
+    font-size:xx-large;
     color:sienna;
 }
 
@@ -32,8 +32,8 @@ h2{
 }
 
 .rectangle {
-    height: 400px;
-    width: 700px;
+    height: 300px;
+    width: 500px;
     background-color: #555;
 }
 
