--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     background-color:#DDD3CA;
   }
 
-h3{
+h1 {
     font-family: Amsterdam;
     font-size:xx-large;
     color:sienna;
@@ -26,7 +26,7 @@ h2{
 }
 
 .rectangle {
-    background-color: #555;
+    background-color: #F6F3F0;
 }
 
 
